src/objects/Project_Component__c.object
<CustomObject>
    <description>Components of the Project - It can include Major Sub-assemblies, Assemblies, Raw Material Supplier types here - This is used to categorize the sub components with a project</description>
    <fields>
        <fullName>Chatter_Group_ID__c</fullName>
        <formula>Chatter_Group__r.Supplier_Network_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Chatter Group ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chatter_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Chatter Group for this component - Each Component Supplier will be part of one or more Chatter Group</description>
        <inlineHelpText>Chatter Group for this component - Each Component Supplier will be part of one or more Chatter Group</inlineHelpText>
        <label>Chatter Group</label>
        <referenceTo>Participant_Group__c</referenceTo>
        <relationshipLabel>Project Components</relationshipLabel>
        <relationshipName>Project_Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Chatter_Link__c</fullName>
        <formula>Chatter_Group__r.Chatter_Link__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Chatter Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component_Name__c</fullName>
        <description>Name of the Component</description>
        <inlineHelpText>Name of the Component</inlineHelpText>
        <label>Component Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component_Rank__c</fullName>
        <description>Importance Ranking ( a measure to know the criticality of the component )</description>
        <inlineHelpText>Importance Ranking ( a measure to know the criticality of the component )</inlineHelpText>
        <label>Component Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Component_Source__c</fullName>
        <description>Supplier of the Component can be either OEM/Major Assembly suppliers/Sub Assembly Suppliers/Parts Suppliers/Raw Materials</description>
        <inlineHelpText>Supplier of the Component can be either OEM/Major Assembly suppliers/Sub Assembly Suppliers/Parts Suppliers/Raw Materials</inlineHelpText>
        <label>Component Source</label>
        <picklist>
            <picklistValues>
                <fullName>OEM</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Major Assembly Suppliers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sub Assembly Suppliers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parts Suppliers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Raw Material Suppliers</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Project Component</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Component_Name__c</columns>
        <columns>Chatter_Group__c</columns>
        <columns>Chatter_Link__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PCID{000000}</displayFormat>
        <label>Project Component ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Components</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>